--- a/ui-theme/build.gradle
+++ b/ui-theme/build.gradle
@@ -53,7 +53,8 @@ dependencies {
     api(AndroidX.Compose.MATERIAL)
     api(AndroidX.Compose.RUNTIME)
     api(AndroidX.Compose.UI)
-    debugApi(AndroidX.Compose.TOOL_PREVIEW)
+    api(AndroidX.Compose.TOOL)
+    // api(AndroidX.Compose.TOOL_PREVIEW)
     api(Material3.MATERIAL3)
 
     // Accompanist
@@ -83,7 +84,7 @@ dependencies {
     api(AndroidX.Hilt.NAVIGATION)
 
     // Debug apis
-    debugApi(AndroidX.Compose.TOOL)
+    // debugApi(AndroidX.Compose.TOOL)
 
     // Test apis
     androidTestApi(AndroidX.Compose.TEST_UI)
