--- a/settings.gradle
+++ b/settings.gradle
@@ -4,14 +4,25 @@ pluginManagement {
         google()
         mavenCentral()
     }
+    resolutionStrategy {
+        eachPlugin {
+            if( requested.id.id == 'dagger.hilt.android.plugin') {
+                useModule("com.google.dagger:hilt-android-gradle-plugin:2.41")
+            }
+        }
+    }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
+        maven { url = uri("https://jitpack.io") }
+        maven { url = uri("https://plugins.gradle.org/m2/") }
+        maven { url  = uri("https://oss.sonatype.org/content/repositories/snapshots/") }
     }
 }
+
 rootProject.name = "LearnCompose"
 include ':app'
 include ':ui-theme'
